--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -19,7 +19,7 @@
               <view id="{{item.id}}" class="weui-cell" hover-class="weui-cell_active" bindtap="deleteAccount">删除
               </view>
               <view id="{{item.id}}" class="weui-cell weui-cell_access" hover-class="weui-cell_active" bindtap="editAccount">
-                <view class="weui-cell__bd">编辑</view>
+                <view class="weui-cell__bd">编辑或查看</view>
                 <view class="weui-cell__ft weui-cell__ft_in-access"></view>
               </view>
             </view>
